@@ -9,10 +9,13 @@ import org.jetbrains.annotations.NotNull;
 import com.raishxn.ufo.init.ModRecipes;
 
 import net.minecraft.core.HolderLookup;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.Identifier;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.item.crafting.RecipeInput;
+import net.minecraft.world.item.crafting.PlacementInfo;
+import net.minecraft.world.item.crafting.RecipeBookCategories;
+import net.minecraft.world.item.crafting.RecipeBookCategory;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.Level;
@@ -46,38 +49,38 @@ public class StellarSimulationRecipe implements Recipe<RecipeInput> {
 
     protected final List<IngredientStack.Item> itemInputs;
     protected final List<IngredientStack.Fluid> fluidInputs;
-    protected final List<GenericStack> itemOutputs;
-    protected final List<GenericStack> fluidOutputs;
+    protected final List<DimensionalMatterAssemblerRecipe.ItemOutput> itemOutputs;
+    protected final List<DimensionalMatterAssemblerRecipe.FluidOutput> fluidOutputs;
 
     protected final String simulationName;      // Display name for the simulation
     protected final long energy;                 // Total AE power cost
     protected final int time;                    // Total ticks for the simulation
     protected final int coolingLevel;            // 0 = none, 1 = basic, 2 = advanced, 3 = extreme
     protected final int fieldTier;               // 1 = Mk.I, 2 = Mk.II, 3 = Mk.III
-    protected final String fuelFluid;            // ResourceLocation string of fuel fluid (e.g., "mekanism:hydrogen")
+    protected final String fuelFluid;            // Identifier string of the fuel fluid
     protected final long fuelAmount;             // Amount of fuel fluid required (mB)
     protected final long coolantAmount;          // Amount of coolant required (mB)
 
     public StellarSimulationRecipe(
-            List<IngredientStack.Item> itemInputs,
-            List<IngredientStack.Fluid> fluidInputs,
-            List<GenericStack> itemOutputs,
-            List<GenericStack> fluidOutputs,
-            String simulationName,
-            long energy,
-            int time,
-            int coolingLevel,
-            int fieldTier,
-            String fuelFluid,
-            long fuelAmount,
-            long coolantAmount) {
+            final List<IngredientStack.Item> itemInputs,
+            final List<IngredientStack.Fluid> fluidInputs,
+            final List<DimensionalMatterAssemblerRecipe.ItemOutput> itemOutputs,
+            final List<DimensionalMatterAssemblerRecipe.FluidOutput> fluidOutputs,
+            final String simulationName,
+            final long energy,
+            final int time,
+            final int coolingLevel,
+            final int fieldTier,
+            final String fuelFluid,
+            final long fuelAmount,
+            final long coolantAmount) {
         this.itemInputs = itemInputs;
         this.fluidInputs = fluidInputs;
         this.itemOutputs = itemOutputs;
         this.fluidOutputs = fluidOutputs;
         this.simulationName = simulationName != null && !simulationName.isEmpty() ? simulationName : "";
         this.energy = energy;
-        this.time = time > 0 ? time : 24000; // default 20 minutes
+        this.time = time > 0 ? time : 24000;
         this.coolingLevel = Math.clamp(coolingLevel, 0, 3);
         this.fieldTier = Math.clamp(fieldTier, 1, 3);
         this.fuelFluid = fuelFluid != null ? fuelFluid : "";
@@ -85,60 +88,57 @@ public class StellarSimulationRecipe implements Recipe<RecipeInput> {
         this.coolantAmount = coolantAmount;
     }
 
-    // Legacy constructor for backward compatibility with old 8-param format
     public StellarSimulationRecipe(
-            List<IngredientStack.Item> itemInputs,
-            List<IngredientStack.Fluid> fluidInputs,
-            List<GenericStack> itemOutputs,
-            List<GenericStack> fluidOutputs,
-            int energy,
-            int time,
-            int coolingLevel,
-            int fieldTier) {
+            final List<IngredientStack.Item> itemInputs,
+            final List<IngredientStack.Fluid> fluidInputs,
+            final List<DimensionalMatterAssemblerRecipe.ItemOutput> itemOutputs,
+            final List<DimensionalMatterAssemblerRecipe.FluidOutput> fluidOutputs,
+            final int energy,
+            final int time,
+            final int coolingLevel,
+            final int fieldTier) {
         this(itemInputs, fluidInputs, itemOutputs, fluidOutputs,
                 "", energy, time, coolingLevel, fieldTier, "", 0, 0);
     }
 
-    // ═══════════════════════════════════════════════════════════
-    //  Recipe<RecipeInput> — Required overrides
-    // ═══════════════════════════════════════════════════════════
 
     @Override
-    public boolean matches(@NotNull RecipeInput recipeInput, @NotNull Level level) {
-        // Matching is done manually by the Controller BE, not by the vanilla system
+    public boolean matches(@NotNull final RecipeInput recipeInput, @NotNull final Level level) {
         return false;
     }
 
     @Override
-    public @NotNull ItemStack assemble(@NotNull RecipeInput inv, HolderLookup.@NotNull Provider registries) {
-        return getResultItem(registries).copy();
+    public @NotNull ItemStack assemble(@NotNull final RecipeInput inv) {
+        return getResultItem().copy();
     }
 
     @Override
-    public boolean canCraftInDimensions(int width, int height) {
-        return true;
-    }
+    public boolean showNotification() { return false; }
 
     @Override
-    public @NotNull ItemStack getResultItem(HolderLookup.@NotNull Provider registries) {
-        return getResultItem();
-    }
+    public String group() { return "ufo:stellar_simulation"; }
+
+    @Override
+    public PlacementInfo placementInfo() { return PlacementInfo.NOT_PLACEABLE; }
+
+    @Override
+    public RecipeBookCategory recipeBookCategory() { return RecipeBookCategories.CRAFTING_MISC; }
 
     public ItemStack getResultItem() {
-        if (!this.itemOutputs.isEmpty() && this.itemOutputs.get(0).what() instanceof AEItemKey key) {
-            // Cap at Integer.MAX_VALUE for ItemStack display — real injection uses long
-            return key.toStack((int) Math.min(this.itemOutputs.get(0).amount(), Integer.MAX_VALUE));
+        if (!this.itemOutputs.isEmpty()) {
+            final var output = this.itemOutputs.getFirst();
+            return new ItemStack(output.item(), (int) Math.min(output.amount(), Integer.MAX_VALUE));
         }
         return ItemStack.EMPTY;
     }
 
     @Override
-    public @NotNull RecipeSerializer<?> getSerializer() {
+    public @NotNull RecipeSerializer<? extends Recipe<RecipeInput>> getSerializer() {
         return StellarSimulationRecipeSerializer.INSTANCE;
     }
 
     @Override
-    public @NotNull RecipeType<?> getType() {
+    public @NotNull RecipeType<? extends Recipe<RecipeInput>> getType() {
         return ModRecipes.STELLAR_SIMULATION_TYPE.get();
     }
 
@@ -147,9 +147,6 @@ public class StellarSimulationRecipe implements Recipe<RecipeInput> {
         return true;
     }
 
-    // ═══════════════════════════════════════════════════════════
-    //  Accessors
-    // ═══════════════════════════════════════════════════════════
 
     public List<IngredientStack.Item> getItemInputs() {
         return itemInputs;
@@ -160,26 +157,34 @@ public class StellarSimulationRecipe implements Recipe<RecipeInput> {
     }
 
     public List<GenericStack> getItemOutputs() {
-        return itemOutputs;
+        return itemOutputs.stream()
+                .map(output -> new GenericStack(AEItemKey.of(output.item()), output.amount()))
+                .toList();
     }
 
     public List<GenericStack> getFluidOutputs() {
-        return fluidOutputs;
+        return fluidOutputs.stream()
+                .map(output -> new GenericStack(appeng.api.stacks.AEFluidKey.of(output.fluid()), output.amount()))
+                .toList();
     }
+
+    public List<DimensionalMatterAssemblerRecipe.ItemOutput> getItemOutputDefinitions() { return itemOutputs; }
+
+    public List<DimensionalMatterAssemblerRecipe.FluidOutput> getFluidOutputDefinitions() { return fluidOutputs; }
 
     /**
      * All valid inputs combined (items + fluids) for recipe matching in the Controller.
      */
     public List<IngredientStack<?, ?>> getValidInputs() {
-        List<IngredientStack<?, ?>> validInputs = new ArrayList<>();
+        final List<IngredientStack<?, ?>> validInputs = new ArrayList<>();
 
-        for (var input : this.itemInputs) {
+        for (final var input : this.itemInputs) {
             if (!input.isEmpty()) {
                 validInputs.add(input.sample());
             }
         }
 
-        for (var input : this.fluidInputs) {
+        for (final var input : this.fluidInputs) {
             if (!input.isEmpty()) {
                 validInputs.add(input.sample());
             }
@@ -219,7 +224,7 @@ public class StellarSimulationRecipe implements Recipe<RecipeInput> {
         return fieldTier;
     }
 
-    /** ResourceLocation string of the required fuel fluid (e.g. "mekanism:hydrogen"). Empty if none. */
+    /** Identifier string of the required fuel fluid. Empty if none. */
     public String getFuelFluid() {
         return fuelFluid;
     }
@@ -247,18 +252,18 @@ public class StellarSimulationRecipe implements Recipe<RecipeInput> {
      * Formatted time string for display (e.g., "20m 00s").
      */
     public String getFormattedTime() {
-        int totalSeconds = time / 20;
-        int minutes = totalSeconds / 60;
-        int seconds = totalSeconds % 60;
+        final int totalSeconds = time / 20;
+        final int minutes = totalSeconds / 60;
+        final int seconds = totalSeconds % 60;
         return String.format("%dm %02ds", minutes, seconds);
     }
 
     /**
-     * Resolves the fuel fluid ResourceLocation, or empty if not set.
+     * Resolves the fuel fluid Identifier, or empty if not set.
      */
-    public Optional<ResourceLocation> getFuelFluidRL() {
+    public Optional<Identifier> getFuelFluidRL() {
         if (fuelFluid.isEmpty()) return Optional.empty();
-        return Optional.of(ResourceLocation.parse(fuelFluid));
+        return Optional.of(Identifier.parse(fuelFluid));
     }
 
 
